# emane-layer-dlep

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  README.md  SPONSOR  configure.ac  dlepmodemservice.cc  dlepmodemservice.h  emane-layer-dlep.spec.in
debian/: changelog.in  control  rules
doc/: AdjacentLink_DLEP_Layer_Design.odp
src/: Makefile.am  dlepclientimpl.cc  dlepclientimpl.h  dlepmodemservice.cc  dlepmodemservice.h  shimlayer.cc  shimlayer.h
src/xml/: Makefile.am  emanelayerdlep.xml.in
